@startuml

class User {
    +username: String
    -email: String
    -password: String
    +full_name: String

}

class Subscription {
    -city: Location
    -user: User
    -notification: Period

}

class Location {
    +city: String
    +country: String
    +actual_weather

    update_weather()
}

class Period {
    +interval: int
    +hours: list


}

class Notificator {
    send_mail()
}

class Scheduler {
    add_task()
}

User "1" *- "many" Subscription : creating >
Subscription "many" o-- "1" Period
Subscription "many" o-- "1" Location
Notificator --|> Subscription
Scheduler o-- Notificator
Scheduler --|> Subscription

@enduml